centered frame text (title high)

--- a/Beamer/beamerouterthemeLPP.sty
+++ b/Beamer/beamerouterthemeLPP.sty
@@ -28,8 +28,12 @@
        \node[anchor= west, white,font=\large] at (0.6,-0.5){\insertframesubtitle};}%
       \fi
       {\node[anchor=west, white,font=\bf\Large] at (0.08,-1.15){\includegraphics[width=0.12\paperwidth]{logo_LPP.png}};}
+      
+    
   \end{tikzpicture}
+    
   \end{beamercolorbox}
+  \vskip12mm%
 }
 
 \mode<all>
